lab1/Test/L1-A-13-78.output
Error Type B at Line 1
Error Type B at Line 7
Error Type B at Line 10
Error Type B at Line 11
Error Type A at Line 13
Error Type B at Line 14
Error Type A at Line 17
Error Type B at Line 18
Error Type B at Line 22
Error Type B at Line 24
Error Type B at Line 26
Error Type B at Line 34
