lab1/Test/L1-A-13-78.cmm
int || Rb7i2UXzLQamQW ( struct sAb7CsibU_Huj _NwKk11O3YRH15OM9 
  , int fhvWemRp0 ) {
}
float EPe [ 1923498833 ] , OQ8JIw 

;
int while W6gDOzey ( ) {
  x0sWLPqqNcptQD8C ;
  tC3I4jGFT 
  if ( bUDskKKbJw )   while ( myqXCXRQXj57ipqf2Tdb 
      if ( cmzc )   N1jtNsoS1SN0nhzuY7Pr ;
else   {
    if ( r `)     U1zmwGku ;
else     if ( int _9RgWqy5 )     COXtJw ;


    t96wmNLt6Cd2D @;
  }[ 



  return while kUJcbo ;
}
struct struct OAr A ;
int lWnaiXP4gwcJfJcn9R 
int bHNScoudPxXhI ;
int Ij ;
struct dpEL4249 qHWyb , GAvax , xZ_iMKz0SVCPzMnqmBl 
  = vCecxPwZFJ || dcy9bn3PjwqW && h17de8RxsWTaPIn == 
  oSHBkC0gGU2z5VYu3 + yEm8ah9k2 / - ! LfPq ( o1wB6ezVJi3B 
  = Psf09A34 < DGRAF_VWsv06 * EDsR [ Wcg6x6xcBN != ( 
  mn9x9RiBH6 && qu11uHWOW6xT7T_m > ! ! ( y51BjDnLAUTdJg 
  = Yq2SU3ZrY7WKVcoWkyrB = vlv_x6MmpfoqulWrlWre >= bH 
  ( Fp361u , PJVuv ) ) / 361191852.2121519434 ) || <= 
  2010456656 - a ( ) . jhZ84pn0ObCcK_YQps5K ] ) ;
struct DWzzEZFjrkraAybnZOQ {
}kn5A9hWpXHfODWKU ;
};
